debugging of modal dark mode view issue

--- a/public/assets/student/css/style.css
+++ b/public/assets/student/css/style.css
@@ -93,6 +93,14 @@ body.dark-mode {
   }
   .dark-mode .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23f0f0f0' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+ }
+ .dark-mode .modal-content {
+  background: #23283a !important;
+  color: #f0f0f0 !important;
+}
+.dark-mode .modal-header,
+.dark-mode .modal-footer {
+  border-color: #444 !important;
 }
 
 #darkModeToggle {
